test/types/unions/badVisit4.good
badVisit4.chpl:7: error: halt reached - illegal union access: no field is active
